[package]
name = "ud_co2s_server"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.3.1"
dotenv = "0.15.0"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serial = "0.4.0"
